# tg_mira

./: .gitignore  Dockerfile  Dockerfile_shedule  docker-compose.yml
tg_mira/: pyproject.toml
tg_mira/tg_mira/: schedule_refresh.py  start_bot.py
tg_mira/tg_mira/db_foo/: db_connect.py  select_db.py  write_db.py
tg_mira/tg_mira/filters/: admin_filter.py
tg_mira/tg_mira/models/: __init__.py  users_model.py
